testsuite/tests/properties/invalid_dflt_arg_val/too_many_args_4.lkt
import common

class Example: FooNode {
    @exported fun p(a: Bool, b: Bool=true): Bool = a and b
    @exported fun calling(): Bool = node.p(true, false, 1, a=false)
}
